--- a/「計算機程式專案」的副本.ipynb
+++ b/「計算機程式專案」的副本.ipynb
@@ -22,11 +22,15 @@
       },
       "source": [
         "\n",
-        "#計算機概論期末報告\n",
+        "#計算機概論期末報告 EN-10\n",
         "\n",
         "\n",
-        "> 計算機概論期末專案：真假新聞判斷 # (部分程式碼參考別人)\n",
+        "> 計算機概論期末專案：真假新聞判斷 # (訓練過程參考別人程式做修改)\n",
         "\n",
+        "組員: \n",
+        "  108701007 羅子翔,\n",
+        "  108205031 簡楨,\n",
+        "  108205382 林鎮儀  \n",
         "\n",
         "\n"
       ]
@@ -37,7 +41,7 @@
         "id": "BwtqROtCH_fW"
       },
       "source": [
-        "    原資料取自於 Kaggle : Fake and real news datasets\n",
+        "    原資料取自於(the dateset is result from) Kaggle : Fake and real news datasets\n",
         "    https://www.kaggle.com/clmentbisaillon/fake-and-real-news-dataset\n",
         "    下面將由雲端導入資料庫"
       ]
@@ -139,7 +143,7 @@
         "id": "vXb9Ibs3YRKr"
       },
       "source": [
-        "    下面是這次專案的流程圖(flow chart)，由於還沒有找到辦法將 google drive 的圖檔呈現出來，所以就先用程式叫出來。"
+        "    下面是這次專案的流程圖(the folloing is the flow chart)，由於還沒有找到辦法將 google drive 的圖檔呈現出來，所以就先用程式叫出來。"
       ]
     },
     {
@@ -185,7 +189,7 @@
         "id": "ppXY_6Y9IekZ"
       },
       "source": [
-        "    讀取資料，分成\"false(假新聞)\"&\"true(真新聞)\""
+        "    讀取資料，分成\"false(假新聞)\"&\"true(真新聞)\"(load the true and false newws)"
       ]
     },
     {
@@ -321,7 +325,7 @@
         "outputId": "ae5a3131-58d6-48a1-fc50-7a9142e2e82e"
       },
       "source": [
-        "true.shape"
+        "true.shape "
       ],
       "execution_count": null,
       "outputs": [
@@ -350,7 +354,7 @@
         "outputId": "35b20835-8a35-48b6-d335-6fc74a2adec7"
       },
       "source": [
-        "false.shape"
+        "false.shape  "
       ],
       "execution_count": null,
       "outputs": [
@@ -374,8 +378,8 @@
         "id": "qNgMXX6vo7ui"
       },
       "source": [
-        "    True & Fake 的資料數分別為 21417 筆和 23481 筆，都有 4 種屬性，分別為 : 標題(title) / 內文(text) / 類別(subject) / 日期(date);\n",
-        "    而資料比例約為 48 : 52，是很平均的資料數據集\n",
+        "    True & Fake 的資料數分別為 21417(True) 筆和 23481(False) 筆，都有 4 種屬性(they both have four properties)，分別為 : 標題(title) / 內文(text) / 類別(subject) / 日期(date);\n",
+        "    而資料比例約為 48(true) : 52(flase)，是很平均的資料數據集\n",
         "    再來確認是否有缺失值"
       ]
     },
@@ -451,7 +455,7 @@
         "id": "5h2eBcyemsgT"
       },
       "source": [
-        "    先合併資料來觀看資料有哪些種類"
+        "    先合併資料來觀看資料有哪些種類(combine true and false datasets)"
       ]
     },
     {
@@ -479,7 +483,7 @@
         "categories = pd.DataFrame(data['subject'].value_counts())\n",
         "categories = categories.reset_index()\n",
         "\n",
-        "plt.figure(figsize=(15,6))    # 顯示圖框架大小\n",
+        "plt.figure(figsize=(15,6))    # 顯示圖框架大小(the size of the picture)\n",
         "\n",
         "labels = categories['index']      # 製作圓餅圖的類別標籤\n",
         "size = categories['subject']      # 製作圓餅圖的數值來源\n",
@@ -591,7 +595,7 @@
         "id": "tMWTbnYmrsjy"
       },
       "source": [
-        "# step.1 : 將 ture & false 各新增一欄位作為標籤，表示該資料的真假。\n",
+        "# step.1 : 將 ture & false 各新增一欄位作為標籤，表示該資料的真假。(lable ture and false)\n",
         "\n",
         "true['label'] = 'true'\n",
         "false['label'] = 'false'"
@@ -605,7 +609,7 @@
         "id": "DM_Uuc-Lr3_X"
       },
       "source": [
-        "# step.2 : 合併 true & false 資料集\n",
+        "# step.2 : 合併 true & false 資料集 (combine true and false datasets)\n",
         "\n",
         "data = pd.concat([true, false])"
       ],
@@ -619,7 +623,7 @@
       },
       "source": [
         "# step.3\n",
-        "# 先複製一個資料集，刪除複製資料集中的 subject & date 屬性\n",
+        "# 先複製一個資料集，刪除複製資料集中的 subject & date 屬性  (copy a dataset and delete the property \"data\",\"subject\" from the dataset)\n",
         "\n",
         "data_copy = data.copy()\n",
         "data_copy = data_copy.drop(labels=['date'], axis='columns')"
@@ -633,7 +637,7 @@
         "id": "7m478UFar_Ky"
       },
       "source": [
-        "# step.4 : 隨機打亂資料集。\n",
+        "# step.4 : 隨機打亂資料集。(random arrange the dataset)\n",
         "\n",
         "data_copy = shuffle(data_copy, random_state=41)"
       ],
@@ -646,7 +650,7 @@
         "id": "0_s0_ZaGsOEK"
       },
       "source": [
-        "# step.5 處理標籤\n",
+        "# step.5 處理標籤(label the index)\n",
         "\n",
         "label_to_index = {'false':0, 'true':1}\n",
         "y = data_copy.label.apply(lambda x: label_to_index[x])\n",
@@ -672,7 +676,7 @@
         "id": "QaHNbEYUtBeH"
       },
       "source": [
-        "# step.6 分成\"標題(title)\"和\"內文(text)\"，兩個資料集\n",
+        "# step.6 分成\"標題(title)\"和\"內文(text)\"，兩個資料集 (devide the dataset to )\n",
         "\n",
         "data_title = data_copy.drop(labels=['text'], axis='columns')\n",
         "data_text = data_copy.drop(labels=['title'], axis='columns')"
